changes in configuration files: gruntfile.js -> I've added the hostname, bower.json -> I've added --allow-root to all the bower commands, I've changed the avCommon repository

--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
     "bower_components"
   ],
   "dependencies": {
-    "avCommon": "https://github.com/agoravoting/agora-gui-common.git#next",
+    "avCommon": "https://github.com/EGC1617Grupo/agora-gui-common.git#3.3.0",
     "angular-local-storage": "~0.2.3"
   }
 }
