--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
     "bower_components"
   ],
   "dependencies": {
-    "avCommon": "https://github.com/EGC1617Grupo/agora-gui-common.git#3.3.0",
+    "avCommon": "https://github.com/EGC1617Grupo/agora-gui-common.git#feature/graphics",
     "angular-local-storage": "~0.2.3"
   }
 }
